--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/SergeiBesedin/blockchain#readme",
   "devDependencies": {
+    "@types/node": "^18.7.14",
+    "copyfiles": "^2.4.1",
+    "serve": "^14.0.1",
     "typescript": "^4.8.2"
   }
 }
