--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "serve",
     "compileDeploy": "tsc && npm run deploy",
-    "deploy": "copyfiles -f src/browser/*.html src/browser/*.css src/assets/icons/*.svg dist"
+    "deploy": "copyfiles -f src/browser/*.html src/browser/*.css src/assets/icons/*.svg src/assets/images/*.png dist"
   },
   "repository": {
     "type": "git",
